# busytag-llm-meter

./: .gitignore  PLAN.md  README.md  README.zh-TW.md  pyproject.toml  task-tracker.md
.github/workflows/: ci.yml
busytag_meter/: __init__.py  __main__.py  cli.py
busytag_meter/device/: __init__.py  discovery.py  serial_io.py
busytag_meter/display/: __init__.py  refresh.py  renderer.py
busytag_meter/hooks/: __init__.py
busytag_meter/installer/: __init__.py
busytag_meter/sources/: __init__.py  _shared_state.py  base.py  claude_code.py  codex.py
docs/: adding-sources.md  architecture.md  phase-1-spec.md  serial-survival-guide.md  troubleshooting.md
tests/: __init__.py  test_codex_poll.py  test_renderer.py  test_shared_state.py
tests/fixtures/: rollout-sample.jsonl
